theme/common.css
/* ... */
.dropdown-contents>li {
	padding-right: 15px;
}

.dropdown-nonscroll>li {
	padding-right: 0;
}

.dropdown li:first-child,
.dropdown li.separator+li,
.dropdown li li {
	border-top: 0;
}

.dropdown li li:first-child {
	margin-top: 4px;
}

.dropdown li li:last-child {
	padding-bottom: 0;
}

.dropdown li li {
	border-top: 1px dotted transparent;
	padding-left: 18px;
}

.wrap .dropdown li,
.dropdown.wrap li,
.dropdown-extended li {
	white-space: normal;
}

.dropdown li.separator {
	border-top: 1px solid transparent;
	padding: 0;
}

.dropdown li.separator:first-child,
.dropdown li.separator:last-child {
	display: block;
}

/* Responsive breadcrumbs
----------------------------------------*/
.breadcrumbs .crumb {
	float: left;
	font-weight: bold;
	word-wrap: normal;
}

.breadcrumbs .crumb:before {
	content: "\2039";
	font-weight: bold;
	padding: 0 0.5em;
}

.breadcrumbs .crumb:first-child:before {
	content: none;
}

.breadcrumbs .crumb a {
	white-space: nowrap;
	text-overflow: ellipsis;
	vertical-align: bottom;
	overflow: hidden;
}

.breadcrumbs.wrapped .crumb a {
	letter-spacing: -0.3px;
}

.breadcrumbs.wrapped .crumb.wrapped-medium a {
	letter-spacing: -0.4px;
}

.breadcrumbs.wrapped .crumb.wrapped-tiny a {
	letter-spacing: -0.5px;
}

.breadcrumbs .crumb.wrapped-max a {
	max-width: 120px;
}

.breadcrumbs .crumb.wrapped-wide a {
	max-width: 100px;
}

.breadcrumbs .crumb.wrapped-medium a {
	max-width: 80px;
}

.breadcrumbs .crumb.wrapped-small a {
	max-width: 60px;
}

.breadcrumbs .crumb.wrapped-tiny a {
	max-width: 40px;
}

/* Table styles
----------------------------------------*/
table.table1 {
	width: 100%;
}

.ucp-main table.table1 {
	padding: 2px;
}

table.table1 thead th {
	font-weight: bold;
	text-transform: uppercase;
	line-height: 1.3em;
	font-size: 1em;
	padding: 10px 0 10px 3px;
}

table.table1 thead th span {
	padding-left: 7px;
}

table.table1 tbody tr {
	border: 1px solid transparent;
}

table.table1 td {
	font-size: 1.1em;
}

table.table1 tbody td {
	padding: 5px;
	border-top: 1px solid transparent;
}

table.table1 tbody th {
	padding: 5px;
	border-bottom: 1px solid transparent;
	text-align: left;
}

/* Specific column styles */
table.table1 .name {
	text-align: left;
}

table.table1 .center {
	text-align: center;
}

table.table1 .reportby {
	width: 15%;
}

table.table1 .posts {
	text-align: center;
	width: 7%;
}

table.table1 .joined {
	text-align: left;
	width: 15%;
}

table.table1 .active {
	text-align: left;
	width: 15%;
}

table.table1 .mark {
	text-align: center;
	width: 7%;
}

table.table1 .info {
	text-align: left;
	width: 30%;
}

table.table1 .info div {
	width: 100%;
	white-space: normal;
	overflow: hidden;
}

table.table1 .autocol {
	line-height: 2em;
	white-space: nowrap;
}

table.table1 thead .autocol {
	padding-left: 1em;
}

table.table1 span.rank-img {
	float: right;
	width: auto;
}

table.info td {
	padding: 3px;
}

table.info tbody th {
	padding: 3px;
	text-align: right;
	vertical-align: top;
	font-weight: bold;
}

.forumbg table.table1 {
	margin: 0;
}

.forumbg-table>.inner {
	margin: 0 -1px;
}

.color_palette_placeholder table {
	border-collapse: separate;
	border-spacing: 1px;
}

/* Misc layout styles
---------------------------------------- */
/* column[1-2] styles are containers for two column layouts */
.column1 {
	float: left;
	clear: left;
	width: 49%;
}

.column2 {
	float: right;
	clear: right;
	width: 49%;
}

/* General classes for placing floating blocks */
.left-box {
	float: left;
	width: auto;
	text-align: left;
	max-width: 100%;
}

.avatar-rank-container {
	max-width: 20%;
}

.left-box.profile-details {
	width: 80%;
}

.right-box {
	float: right;
	width: auto;
	text-align: right;
	max-width: 100%;
}

dl.details {
	font-size: 1.1em;
}

dl.details dt {
	float: left;
	clear: left;
	width: 30%;
	text-align: right;
	display: block;
}

dl.details dd {
	margin-left: 0;
	padding-left: 5px;
	margin-bottom: 5px;
	float: left;
	width: 65%;
	overflow: hidden;
	text-overflow: ellipsis;
}

.clearfix,
fieldset dl,
ul.topiclist dl,
dl.polls {
	overflow: hidden;
}

fieldset.fields1 ul.recipients {
	list-style-type: none;
	line-height: 1.8;
	max-height: 150px;
	overflow-y: auto;
}

fieldset.fields1 dd.recipients {
	clear: left;
	margin-left: 1em;
}


fieldset.fields1 dl.pmlist>dt {
	width: auto !important;
}

fieldset.fields1 dl.pmlist dd.recipients {
	margin-left: 0 !important;
}

/* Action-bars (container for post/reply buttons, pagination, etc.)
---------------------------------------- */
.action-bar {
	font-size: 11px;
	margin: 20px 0;
}

.forabg+.action-bar {
	margin-top: 2em;
}

.action-bar .button {
	margin-right: 5px;
	float: left;
}

.action-bar .button-search {
	margin-right: 2px;
	margin-left: -6px;
}

.search-box .inputbox {
	margin-top: 8px;
}

/* Pagination
---------------------------------------- */
.pagination {
	float: right;
	text-align: right;
	width: auto;
	font-weight: bold;
}

.pagination .mark-read {
	vertical-align: middle;
}

.action-bar.bar-bottom .pagination {
	margin-top: 0;
}


.action-bar .pagination .arrow .button a {
	padding-inline: 10px;
}

.action-bar .pagination .arrow .button a .icon {
	vertical-align: middle;
}

.pagination>ul {
	display: inline-block;
	list-style: none !important;
	margin-left: 15px;
}

.pagination>ul>li {
	display: inline-block !important;
	padding: 0;
	font-size: 100%;
	line-height: normal;
	vertical-align: middle;
}

.pagination li.ellipsis span {
	border: none;
	padding: 0;
}

.pagination li.page-jump {
	margin-right: 5px;
}

.pagination .button::before {
	z-index: -1;
}


/* Pagination in viewforum for multipage topics */
.row .pagination {
	display: block;
	margin-top: 3px;
	margin-bottom: 3px;
}

.row .pagination>ul {
	margin: 0;
}

.row .pagination li a,
.row .pagination li span {
	border-radius: 0px;
	font-size: 80%;
}

.row .pagination li:hover,
.row .pagination li:focus,
.row .pagination li:active {
	text-shadow: 0px 0px 5px currentColor;
}
/* ... */

